# kApplicationPlatform

./: CMakeLists.txt  License  README.md  conanfile.py
cmake/toolchains/: linux-clang.cmake  windows-msvc.cmake
docker/: Linux.dockerfile  Windows.dockerfile
src/ApplicationPlatform/: CMakeLists.txt
src/PluginBase/: CMakeLists.txt
src/PluginBase/src/: PluginBase.cc  PluginBase.hh
